--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -4,6 +4,7 @@
         <div class="col-md-3">
             <p class="lead">YelpCamp</p>
             <div class="list-group">
+                <a class="list-group-item" href="/campgrounds">Back to Campgrounds</a>
                 <li class="list-group-item active">Info 1</li>
                 <li class="list-group-item">Info 2</li>
                 <li class="list-group-item">Info 3</li>
