--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,13 @@
 <%- include("./partials/header") %>
 
-<h1>login</h1>
+<h1>Login</h1>
 
 <form action="/login" method="POST">
     <input type="text" name="username" placeholder="username">
     <input type="password" name="password" placeholder="password">
     <input type="submit" value="Login">
 </form>
+
+<a href="/register">Create New Account</a>
 
 <%- include("./partials/footer") %>
